--- a/index.html
+++ b/index.html
@@ -2,39 +2,53 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/styles.css">
+
+
+
 </head>
 
 <header>
 
 <nav>
-    <a href="./index.html">WebStudio</a>
+    <a class="logo" href="./index.html">
+        <span class="first-part">Web</span>
+        <span class="second-part">Studio</span>
+    </a>
 
-    <ul>
-        <li><a href="#Studio">Studio</a></li>
-        <li><a href="#Portfolio">Portfolio</a></li>
-        <li><a href="#Contacts">Contacts</a></li>
+    <ul class="site-nav">
+        <li><a href="./index.html" class="link current">Studio</a></li>
+        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+        <li><a href="#Contacts" class="link">Contacts</a></li>
     </ul>
 </nav>
 
-<address>
+<address class="address">
     <ul>
-    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
+    <li><a href="tel:+110001111111" class="telephone-num">+11 (000) 111-11-11</a></li>
     </ul>
 </address>
 
 </header>
 
 <main>
-<section>
+<section class="headline">
     <h1>Effective Solutions for Your Business</h1>
-    <button type="button">Order Service</button>
+    <button class="button primary" type="button">Order Service</button>
 </section>
 
-<section>
-    <h2>Our Advantages</h2>
+<section class="list-adv">
+    <h2 class="list-adv-title">Our Advantages</h2>
     <ul>
         <li>
     <h3>Strategy</h3>
@@ -58,8 +72,8 @@
     </ul>
 </section>
 
-<section>
-<h2>What are we doing</h2>
+<section class="section">
+<h2 class="section-title">What are we doing</h2>
 <ul>
 <li><img src="./images/img1.jpg" alt="A computer wih some statistics" width="360"></li>
 <li><img src="./images/img2.jpg" alt="A cell phone with some WhatsApp charts" width="360"></li>
@@ -67,8 +81,8 @@
 </ul>
 </section>
 
-<section>
-<h2>Our Team</h2>
+<section class="section-team">
+<h2 class="section-title-team">Our Team</h2>
 <ul>
 <li><img src="./images/img4.jpg" alt="A smiling man with black beard" width="264">
 <h3>Mark Guerrero</h3>
@@ -91,8 +105,10 @@
 </main>
 
 <footer>
-<a
-    href="./index.html">WebStudio</a>
+<a class="logo" href="./index.html">
+    <span class="first-part">Web</span>
+    <span class="footer-second-part">Studio</span>
+</a>
 <p>Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.</p>
 </footer>
 
