--- a/index.html
+++ b/index.html
@@ -20,22 +20,21 @@
 <header>
 
 <nav>
-    <a class="logo" href="./index.html">
-        <span class="first-part">Web</span>
-        <span class="second-part">Studio</span>
+    <a class="logo link" href="./index.html">Web
+            <span class="second-part">Studio</span>
     </a>
 
-    <ul class="site-nav">
-        <li><a href="./index.html" class="link current">Studio</a></li>
-        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-        <li><a href="#Contacts" class="link">Contacts</a></li>
+    <ul class="list">
+        <li><a href="./index.html" class="first-page link current">Studio</a></li>
+        <li><a href="./portfolio.html" class="first-page link">Portfolio</a></li>
+        <li><a href="" class="first-page">Contacts</a></li>
     </ul>
 </nav>
 
-<address class="address">
+<address class="address list">
     <ul>
-    <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
-    <li><a href="tel:+110001111111" class="telephone-num">+11 (000) 111-11-11</a></li>
+    <li><a href="mailto:info@devstudio.com" class="link email">info@devstudio.com</a></li>
+    <li><a href="tel:+110001111111" class="link telephone-num">+11 (000) 111-11-11</a></li>
     </ul>
 </address>
 
@@ -43,16 +42,16 @@
 
 <main>
 <section class="headline">
-    <h1>Effective Solutions for Your Business</h1>
+    <h1 class="headline-title">Effective Solutions for Your Business</h1>
     <button class="button primary" type="button">Order Service</button>
 </section>
 
-<section class="list-adv">
-    <h2 class="list-adv-title">Our Advantages</h2>
+<section class="list adv">
+    <h2 class="adv-title">Our Advantages</h2>
     <ul>
         <li>
     <h3>Strategy</h3>
-    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+    <p class="adv-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
         </li>
 
         <li>
@@ -74,7 +73,7 @@
 
 <section class="section">
 <h2 class="section-title">What are we doing</h2>
-<ul>
+<ul class="list">
 <li><img src="./images/img1.jpg" alt="A computer wih some statistics" width="360"></li>
 <li><img src="./images/img2.jpg" alt="A cell phone with some WhatsApp charts" width="360"></li>
 <li><img src="./images/img3.jpg" alt="Both laptop and cell phone showing the article about the most inspiring places" width="360"></li>
@@ -83,10 +82,10 @@
 
 <section class="section-team">
 <h2 class="section-title-team">Our Team</h2>
-<ul>
-<li><img src="./images/img4.jpg" alt="A smiling man with black beard" width="264">
-<h3>Mark Guerrero</h3>
-<p>Product Designer</p></li>
+<ul class="list">
+<li><img src="./images/img4.jpg" alt="A smiling man with black beard" width="264" class="list-img">
+<h3 class="list-heading">Mark Guerrero</h3>
+<p class="list-text">Product Designer</p></li>
 
 <li><img src="./images/img5.jpg" alt="A smiling man who looks away" width="264">
 <h3>Tom Ford</h3>
@@ -94,7 +93,7 @@
 
 <li><img src="./images/img6.jpg" alt="A smiling woman with long hair" width="264">
 <h3>Camila Garcia</h3>
-<p>Marketing</p></li>
+<p >Marketing</p></li>
 
 <li><img src="./images/img7.jpg" alt="A smiling man wearing T-shirt" width="264">
 <h3>Daniel Wilson</h3>
@@ -104,12 +103,12 @@
 
 </main>
 
-<footer>
-<a class="logo" href="./index.html">
-    <span class="first-part">Web</span>
+<footer class="page-footer">
+<a class="logo link" href="./index.html">Web
     <span class="footer-second-part">Studio</span>
 </a>
-<p>Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.</p>
+
+<p class="slogan">Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.</p>
 </footer>
 
 </html>
