--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
     <ul class="list">
         <li><a href="./index.html" class="first-page link current">Studio</a></li>
-        <li><a href="./portfolio.html" class="first-page link">Portfolio</a></li>
-        <li><a href="" class="first-page">Contacts</a></li>
+        <li><a href="./portfolio.html" class="first-page link current">Portfolio</a></li>
+        <li><a href="" class="first-page link current">Contacts</a></li>
     </ul>
 </nav>
 
 <address class="address list">
-    <ul>
-    <li><a href="mailto:info@devstudio.com" class="link email">info@devstudio.com</a></li>
-    <li><a href="tel:+110001111111" class="link telephone-num">+11 (000) 111-11-11</a></li>
+    <ul class="contacts list">
+    <li><a class="link link email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li><a class="link link email" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
 </address>
 
@@ -46,27 +46,27 @@
     <button class="button primary" type="button">Order Service</button>
 </section>
 
-<section class="list adv">
+<section class="adv">
     <h2 class="adv-title">Our Advantages</h2>
-    <ul>
+    <ul class="adv-table list">
         <li>
-    <h3>Strategy</h3>
+    <h3 class="adv-table-title">Strategy</h3>
     <p class="adv-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
         </li>
 
         <li>
-    <h3>Punctuality</h3>
-    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+    <h3 class="adv-table-title">Punctuality</h3>
+    <p class="adv-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         
         <li>
-   <h3>Diligence</h3>
-    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+   <h3 class="adv-table-title">Diligence</h3>
+    <p class="adv-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
 
         <li>
-    <h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+    <h3 class="adv-table-title">Technologies</h3>
+    <p class="adv-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
     </ul>
 </section>
@@ -83,21 +83,21 @@
 <section class="section-team">
 <h2 class="section-title-team">Our Team</h2>
 <ul class="list">
-<li><img src="./images/img4.jpg" alt="A smiling man with black beard" width="264" class="list-img">
+<li class="section-img-team"><img src="./images/img4.jpg" alt="A smiling man with black beard" width="264" class="list-img">
 <h3 class="list-heading">Mark Guerrero</h3>
 <p class="list-text">Product Designer</p></li>
 
-<li><img src="./images/img5.jpg" alt="A smiling man who looks away" width="264">
-<h3>Tom Ford</h3>
-<p>Frontend Developer</p></li>
+<li class="section-img-team"><img src="./images/img5.jpg" alt="A smiling man who looks away" width="264">
+<h3 class="list-heading">Tom Ford</h3>
+<p class="list-text">Frontend Developer</p></li>
 
-<li><img src="./images/img6.jpg" alt="A smiling woman with long hair" width="264">
-<h3>Camila Garcia</h3>
-<p >Marketing</p></li>
+<li class="section-img-team"><img src="./images/img6.jpg" alt="A smiling woman with long hair" width="264">
+<h3 class="list-heading">Camila Garcia</h3>
+<p class="list-text">Marketing</p></li>
 
-<li><img src="./images/img7.jpg" alt="A smiling man wearing T-shirt" width="264">
-<h3>Daniel Wilson</h3>
-<p>UI Designer</p></li>
+<li class="section-img-team"><img src="./images/img7.jpg" alt="A smiling man wearing T-shirt" width="264">
+<h3 class="list-heading">Daniel Wilson</h3>
+<p class="list-text">UI Designer</p></li>
 </ul>
 </section>
 
